--- a/style.css
+++ b/style.css
@@ -514,8 +514,9 @@ X
 .working{
     overflow-x: hidden;
     padding: 3%;
-    background-image: url("pics/adrien-fu-92gSSPN8Wus-unsplash.jpg");
+    background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.342), rgba(0, 0, 0, 0.295)), url("pics/adrien-fu-92gSSPN8Wus-unsplash.jpg");
     color: #000000;
+    /* -webkit-filter: brightness(50%); */
     background-size: cover;
     background-attachment:fixed;
     background-position: center center;
@@ -544,7 +545,7 @@ X
     align-items: center;
     padding: 5%;
     padding-top: 0%;
-
+    padding-bottom: 0;
 }
 .dev{
     margin: 4%;
@@ -578,6 +579,13 @@ X
 .dev h4{
     font-size: 1rem;
 }
+
+@media screen and (min-width: 1620px){
+    .dev h4{
+        font-size: 2rem;
+    }
+}
+
 @media screen and (max-width: 575px){
     .dev h4{
         font-size: small;
@@ -670,6 +678,8 @@ X
     font-weight: 400;
     /* font-size: 1rem; */
 }
+
+
 @media screen and (max-width: 370px){
     .skill-title h1{
         font-size: 1rem;
@@ -699,6 +709,14 @@ X
     width: 200px;
     transition: 0.5s;
 
+}
+
+@media screen and (min-width: 1750px){
+    .rows img{
+        padding: 4%;
+        height: 340px;
+        width: 340px;
+    }
 }
 @media screen and (max-width: 440px){
     .rows img{
@@ -786,7 +804,7 @@ X
 .interest-info{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     padding: 3%;
     
